# bufio

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: test.yml
src/: lib.rs  writer.rs
